# sck-core-docs

./: .gitignore  DOCUMENTATION_RESTRUCTURE.md  README.md  build.ps1  build.sh  clean.ps1  fix_autosummary.py  fix_docstrings.py  portfolio-model.md  pyproject.toml  start.ps1  start.sh  tox.ini
.github/: copilot-instructions.md
core_docs/: __init__.py  _version.py  build.py  server.py
docs/: conf.py  mutl-tenant.md  portfolio-model.md
docs/developer_guide/: action-addons.rst  actions.rst  architecture.rst  common.rst  conf.py  deploying_apps.rst  deploying_automation.rst  deployspec_compiler.rst  documentation.rst  execute.rst  getting_started.rst  index.rst  overview.rst  testing.rst  validator.rst
docs/developer_guide/_static/: footer.js
docs/developer_guide/compiler/: component_compiler.rst  security_rules.rst
docs/developer_guide/images/: architecture.xml  runner-diagrams.xml
docs/developer_guide/samples/: core-automation-resources.yaml
docs/developer_guide_new/: conf.py
docs/developer_guide_new/_static/: custom.css
docs/developer_guide_new/_templates/: custom-class-template.rst
docs/technical_reference/: conf.py  index.rst  introduction.rst  modules.rst
docs/technical_reference/_static/: footer.js
docs/technical_reference/_templates/: custom-module-template.rst  custom-toctree.html.j2  library_footer.rst
docs/technical_reference/core-api/: core-api.rst
docs/technical_reference/core-automation/: core-automation.rst  running.rst  security_rules.rst
docs/technical_reference/core-component-compiler/: core-component-compiler.rst
docs/technical_reference/core-db/: core-db.rst  db_schema.rst
docs/technical_reference/core-deployspec-compiler/: core-deployspec-compiler.rst
docs/technical_reference/core-execute/: actionlib_aws.rst  actionlib_aws_kms.rst  actionlib_aws_rds.rst  actionlib_system.rst  actions.rst  actions_library.rst  core-execute.rst
docs/technical_reference/core-framework/: core-framework.rst
docs/technical_reference/core-helper/: core-helper.rst
docs/technical_reference/core-invoker/: core-invoker.rst
docs/technical_reference/core-logging/: core-logging.rst
docs/technical_reference/core-logging/_autosummary/: core_logging.log_interface.rst
docs/technical_reference/core-renderer/: core-renderer.rst
docs/technical_reference/core-runner/: core-runner.rst
docs/user_guide/: commandline.rst  conf.py  consumables.rst  describing-your-infrastructure.rst  directory-structure.rst  getting-started.rst  index.rst  introduction.rst  kms-keys.rst  pipeline-functions.rst  teardown-protection.rst  useful-patterns.rst
docs/user_guide/_static/: custom.css  footer.js
docs/user_guide/consumables/: applicationloadbalancer.rst  autoscale.rst  cluster.rst  dynamodb.rst  efs.rst  elasticache-redis.rst  image.rst  instance.rst  loadbalancedinstances.rst  rds-aurora-mysql.rst  rds-aurora-postgresql.rst  rds-documentdb.rst  rds-mariadb.rst  rds-mssql.rst  rds-mysql.rst  rds-oracle.rst  rds-postgresql.rst  redshift-cluster.rst  s3-bucket.rst  s3-storage.rst  secret.rst  serverless.rst  sqs.rst  staticwebsite.rst  staticwebsitev2.rst
docs/user_guide/doctrees/: consumables.doctree  describing-your-infrastructure.doctree  directory-structure.doctree  environment.pickle  getting-started.doctree  index.doctree  introduction.doctree  kms-keys.doctree  pipeline-functions.doctree  teardown-protection.doctree  useful-patterns.doctree
docs/user_guide/doctrees/consumables/: applicationloadbalancer.doctree  autoscale.doctree  cluster.doctree  dynamodb.doctree  efs.doctree  elasticache-redis.doctree  image.doctree  instance.doctree  loadbalancedinstances.doctree  rds-aurora-mysql.doctree  rds-aurora-postgresql.doctree  rds-mariadb.doctree  rds-mssql.doctree  rds-mysql.doctree  rds-oracle.doctree  rds-postgresql.doctree  redshift-cluster.doctree  s3-bucket.doctree  s3-storage.doctree  secret.doctree  serverless.doctree  sqs.doctree  staticwebsite.doctree
docs/user_guide/images/: applicationloadbalancer.xml  autoscale.xml  autoscale2.xml  cd-lifecycle.xml  dynamodb.xml  ecs-cluster.xml  ecs-service.xml  efs.xml  instance.xml  kms-architecture.xml  loadbalancedinstances.xml  mariadb.xml  mssql.xml  mysql.xml  oraclesql.xml  postgresql.xml  redshift.xml  secret.xml  serverless.xml  sqs.xml  staticwebsite.xml
docs/user_guide/samples/: applicationloadbalancer-quickstart.yaml  autoscale-alb-quickstart.yaml  autoscale-clb-quickstart.yaml  cluster-quickstart.yaml  component-example.yaml  documentdb-quickstart.yaml  dynamodb-payperrequest.yaml  dynamodb-quickstart.yaml  elasticache-redis-quickstart.yaml  instance-quickstart.yaml  loadbalancedinstances-quickstart.yaml  rds-aurora-mysql-quickstart.yaml  rds-aurora-postgresql-quickstart.yaml  rds-mariadb-quickstart.yaml  rds-mssql-quickstart.yaml  rds-mysql-quickstart.yaml  rds-oracle-quickstart.yaml  rds-postgresql-quickstart.yaml  redshift-quickstart.yaml  s3-bucket-branch.yaml  s3-bucket-lifecycle.yaml  s3-bucket-quickstart.yaml  s3-storage-quickstart.yaml  secret-quickstart.yaml  serverless-quickstart.yaml  serverless-s3-subscriptions.yaml  serverless-scheduled.yaml  sqs-queue-quickstart.yaml  staticwebsite-quickstart.yaml  staticwebsite-v2-quickstart.yaml
docs/user_guide_new/: commandline.rst  conf.py  organizations.rst
