[tool.poetry]
name = "sck-core-docs"
version = "0.1.0"
description = "Documentation for Core Automation"
authors = ["James Barwick <jbarwick@me.com>"]
license = "GPL-3.0-only"
readme = "README.md"

keywords = ["simple-cloud-kit", "core-automation", "core", "sck", "docs"]

include = ["user-guide/*", "developer-guide/*", "api-guide/*", "locale/**/LC_MESSAGES/*.po", "locale/**/LC_MESSAGES/*.mo"]

[[tool.poetry.packages]]
include = "core_docs"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
cattrs = ">=23.1.2"
sphinx = "^8.1.3"
myst-parser = "^4.0.0"
sphinx-rtd-theme = "^3.0.2"
sphinx_design = "^0.6.1"
sphinxcontrib-openapi = "^0.8.4"
sphinxcontrib-napoleon = "^0.7"

sck-core-framework = { path = "../sck-core-framework", develop = true }
sck-core-db = { path = "../sck-core-db", develop = true }
sck-core-execute = { path = "../sck-core-execute", develop = true }
sck-core-runner = { path = "../sck-core-runner", develop = true }
sck-core-invoker = { path = "../sck-core-invoker", develop = true }
sck-core-api = { path = "../sck-core-api", develop = true }
sck-core-component = { path = "../sck-core-component", develop = true }
sck-core-deployspec = { path = "../sck-core-deployspec", develop = true }

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry.group.dev.dependencies]
websockets = { version = "*", optional = true }
sphinx-autodoc-typehints = "^2.5.0"
sphinxcontrib-httpdomain = "^1.8.1"
sphinx-autobuild = "^2024.10.3"
furo = "^2024.8.6"
flake8 = "^7.1.1"
pytest = "^8.3.3"
cfn-lint = "^1.18.4"
doc8 = "^1.1.2"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
types-pygments = "^2.18.0.20240506"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.files."core_docs/_version.py"]
persistent-substitution = true
initial-content = """
  \"\"\"
  This is the version informatooin for this template
  \"\"\"
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

# Create script to build.main
[tool.poetry.scripts]
build = "core_docs.build:main"

[tool.esbonio.sphinx]
pythonCommand = ["poetry", "run", "python"]
