[tool.poetry]
name = "sck-core-docs"
version = "0.0.6"
description = "Documentation for Core Automation"
authors = ["James Barwick <jbarwick@me.com>"]
license = "GPL-3.0-only"
readme = "README.md"

keywords = ["sck", "core", "aws", "cloud", "automation"]

include = [
  "user-guide/*",
  "developer-guide/*",
  "api-guide/*",
  "locale/**/LC_MESSAGES/*.po",
  "locale/**/LC_MESSAGES/*.mo",
]

[[tool.poetry.packages]]
include = "core_docs"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
cattrs = ">=23.1.2"
sphinx = "^8.1.3"
myst-parser = "^4.0.0"
sphinx-rtd-theme = "^3.0.2"
sphinx_design = "^0.6.1"
sphinxcontrib-openapi = "^0.8.4"
sphinxcontrib-napoleon = "^0.7"


[tool.poetry.dependencies.sck-core-cli]
path = "../sck-core-cli"
develop = true

[tool.poetry.dependencies.sck-core-api]
path = "../sck-core-api"
develop = true

[tool.poetry.dependencies.sck-core-organization]
path = "../sck-core-organization"
develop = true

[tool.poetry.dependencies.sck-core-invoker]
path = "../sck-core-invoker"
develop = true

[tool.poetry.dependencies.sck-core-deployspec]
path = "../sck-core-deployspec"
develop = true

[tool.poetry.dependencies.sck-core-component]
path = "../sck-core-component"
develop = true

[tool.poetry.dependencies.sck-core-runner]
path = "../sck-core-runner"
develop = true

[tool.poetry.dependencies.sck-core-execute]
path = "../sck-core-execute"
develop = true

[tool.poetry.dependencies.sck-core-db]
path = "../sck-core-db"
develop = true

[tool.poetry.dependencies.sck-core-framework]
path = "../sck-core-framework"
develop = true
[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry.group.dev.dependencies]
websockets = "^14.1"
sphinx-autodoc-typehints = "^2.5.0"
sphinxcontrib-httpdomain = "^1.8.1"
sphinx-autobuild = "^2024.10.3"
furo = "^2024.8.6"
flake8 = "^7.1.1"
pytest = "^8.3.3"
cfn-lint = "^1.22.3"
doc8 = "^1.1.2"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
types-pygments = "^2.18.0.20240506"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["core_docs/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

# Create script to build.main
[tool.poetry.scripts]
build = "core_docs.build:main"

[tool.esbonio.sphinx]
pythonCommand = ["poetry", "run", "python"]
