[project]
name = "sck-core-docs"
version = "1.3.0"
description = "Documentation for Core Automation"
authors = [{ name = "James Barwick", email = "jbarwick@eits.com.sg" }]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = [{ name = "James Barwick", email = "jbarwick@eits.com.sg" }]
keywords = ["sck", "core", "aws", "cloud", "automation"]
requires-python = ">=3.11,<3.13"

dependencies = [
   "requests (>=2.32.3)",
   "cattrs (>=23.1.2)",
   "sphinx (>=8.1.3)",
   "myst-parser (>=4.0.0)",
   "sphinx-rtd-theme (>=3.0.2)",
   "sphinx-design (>=0.6.1)",
   "sphinxcontrib-openapi (>=0.8.4)",
   "sphinxcontrib-napoleon (>=0.7)",
   "fastapi (>=0.115.4)",
   "sck-core-cli",
   "sck-core-organization",
   "sck-core-invoker",
   "sck-core-deployspec",
   "sck-core-component",
   "sck-core-runner",
   "sck-core-report",
   "sck-core-execute",
   "sck-core-db",
   "sck-core-framework",
   "sck-core-api",
   "python-docs-theme>=2025.2",
]

[project.optional-dependencies]
dev = [
   "pytest>=8.3.3",
   "flake8>=7.1.1",
   "cfn-lint>=1.22",
   "pytest-asyncio>=0.25.0",
   "boto3-stubs>=1.34.51",
   "pytest-dotenv>=0.5.2",
   "pytest-cov>=6.0.0",
   "black>=25.9.0",
   "uvicorn>=0.37.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core_docs"]

[tool.black]
line-length = 132
target-version = ["py311"]
skip-string-normalization = true

# Use a proper multi-line regex (mirrors style used in framework module)
exclude = '''
/(
      \.git
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
    | venv
    | \.venv
    | htmlcov
)/
'''

[tool.uv.sources]
sck-core-framework = { path = "../sck-core-framework", editable = true }
sck-core-db = { path = "../sck-core-db", editable = true }
sck-core-execute = { path = "../sck-core-execute", editable = true }
sck-core-report = { path = "../sck-core-report", editable = true }
sck-core-runner = { path = "../sck-core-runner", editable = true }
sck-core-component = { path = "../sck-core-component", editable = true }
sck-core-deployspec = { path = "../sck-core-deployspec", editable = true }
sck-core-invoker = { path = "../sck-core-invoker", editable = true }
sck-core-organization = { path = "../sck-core-organization", editable = true }
sck-core-api = { path = "../sck-core-api", editable = true }
sck-core-cli = { path = "../sck-core-cli", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
